Fix Java 8 compatibility issues by replacing List.of() and Map.of() with alternatives